# real-estate-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SOCIAL_SIMULATION_IMPLEMENTATION.md  alembic.ini  architecture.md  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
agent/: assistant_agent.py  base_agent.py  broker_agent.py  buyer_agent.py  guardrails.py  memory.py  negotiation.py  negotiation_engine.py  orchestrator.py  prompts.py  prompts_assistant.py  seller_agent.py  simulation_tools.py  tool_acl.py  tool_registry.py
alembic/: env.py
api/: agent.py  batch_simulation.py  deals.py  households.py  negotiations.py  offers.py  properties.py  reports.py  schemas.py  search.py  simulation.py  social_simulation.py  users.py  visualization.py  webhooks.py  ws.py  ws_events.py
db/: database.py  models.py
doc/: PLATFORM_WORKFLOWS.md  app-summary-one-page.md  business-ai-implementation-skeleton.md  buyer-vs-seller-website-interaction.md  implementation-lessons.md  llm-transformer-systems-study-from-claude-code-src.md  simulation-and-intelligence-architecture.md  testing-with-csv-dataset.md
frontend/: 2026-03-19-real-estate-implement-the-following-plan.txt  index.html  package-lock.json  package.json  vite.config.ts
intelligence/: financial_models.py  mirofish_client.py  report_parser.py  seed_assembly.py
middleware/: auth.py  correlation.py  rate_limit.py
scripts/: init-shared-db.sh  seed_from_csv.py  seed_households.py  seed_kaggle_chicago_2024.py  seed_kaggle_usa.py  seed_properties.py  (+1 more)
(+87 files in other folders)
